--- a/MS-DOS/Batman/Batman.exe.html
+++ b/MS-DOS/Batman/Batman.exe.html
@@ -25,7 +25,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Chex Quest 1</title>
+    <title>Batman Doom</title>
     <style type="text/css">
         .dosbox-container {
             width: 640px;
