--- a/MS-DOS/Quake2/PlayNQuake/E635C924D74AFB6527B814C542FC5B1C.cache.html
+++ b/MS-DOS/Quake2/PlayNQuake/E635C924D74AFB6527B814C542FC5B1C.cache.html
@@ -5249,6 +5249,7 @@ function $converted(this$static){
   log_0 = $doc.getElementById('splash');
   $removeChild($doc.body, log_0);
   $doc.getElementById('playn-root').style['visibility'] = ($clinit_Style$Visibility() , 'visible');
+  $doc.getElementById('log').style['visibility'] = ($clinit_Style$Visibility() , 'hidden');
   $onSuccess_5(this$static.doneCallback);
 }
 
@@ -13871,7 +13872,7 @@ _.white = 0;
 function $clinit_Menu(){
   $clinit_Menu = nullMethod;
   var n, n0, n1;
-  MAIN_MENU_NAMES_NOMULTI = initValues(_3Ljava_lang_String_2_classLit, makeCastMap([Q$Serializable, Q$Serializable_$1, Q$CharSequence_$1, Q$Cloneable, Q$Comparable_$1, Q$Object_$1, Q$String_$1]), Q$String, ['m_main_game', 'm_main_options']);
+  MAIN_MENU_NAMES_NOMULTI = initValues(_3Ljava_lang_String_2_classLit, makeCastMap([Q$Serializable, Q$Serializable_$1, Q$CharSequence_$1, Q$Cloneable, Q$Comparable_$1, Q$Object_$1, Q$String_$1]), Q$String, ['m_main_game', 'm_main_options', 'm_main_quit', 'm_main_multiplayer',  'm_main_video']);
   MAIN_MENU_NAMES = MAIN_MENU_NAMES_NOMULTI;
   m_layers = initDim(_3Lcom_googlecode_playnquake_core_client_Menu$menulayer_1t_2_classLit, makeCastMap([Q$Serializable, Q$Cloneable, Q$Object_$1]), Q$Menu$menulayer_t, 8, 0);
   Menu_Main = new Menu$3_0;
@@ -13922,7 +13923,7 @@ function $clinit_Menu(){
   yesno_names = initValues(_3Ljava_lang_String_2_classLit, makeCastMap([Q$Serializable, Q$Serializable_$1, Q$CharSequence_$1, Q$Cloneable, Q$Comparable_$1, Q$Object_$1, Q$String_$1]), Q$String, ['no', 'yes']);
   crosshair_names = initValues(_3Ljava_lang_String_2_classLit, makeCastMap([Q$Serializable, Q$Serializable_$1, Q$CharSequence_$1, Q$Cloneable, Q$Comparable_$1, Q$Object_$1, Q$String_$1]), Q$String, ['none', 'cross', 'dot', 'angle']);
   Menu_Options = new Menu$8_0;
-  idcredits = initValues(_3Ljava_lang_String_2_classLit, makeCastMap([Q$Serializable, Q$Serializable_$1, Q$CharSequence_$1, Q$Cloneable, Q$Comparable_$1, Q$Object_$1, Q$String_$1]), Q$String, ['+QUAKE II BY ID SOFTWARE', '', '+PROGRAMMING', 'John Carmack', 'John Cash', 'Brian Hook', '', '+JAVA PORT BY BYTONIC', 'Carsten Weisse', 'Holger Zickner', 'Rene Stoeckel', '', '+GWT PORT BY GOOGLE', 'Ray Cromwell', 'Stefan Haustein', 'Joel Webber', '', '+ART', 'Adrian Carmack', 'Kevin Cloud', 'Paul Steed', '', '+LEVEL DESIGN', 'Tim Willits', 'American McGee', 'Christian Antkow', 'Paul Jaquays', 'Brandon James', '', '+BIZ', 'Todd Hollenshead', 'Barrett (Bear) Alexander', 'Donna Jackson', '', '', '+SPECIAL THANKS', 'Ben Donges for beta testing', '', '', '', '', '', '', '+ADDITIONAL SUPPORT', '', '+LINUX PORT AND CTF', 'Dave "Zoid" Kirsch', '', '+CINEMATIC SEQUENCES', 'Ending Cinematic by Blur Studio - ', 'Venice, CA', '', 'Environment models for Introduction', 'Cinematic by Karl Dolgener', '', 'Assistance with environment design', 'by Cliff Iwai', '', '+SOUND EFFECTS AND MUSIC', 'Sound Design by Soundelux Media Labs.', 'Music Composed and Produced by', 'Soundelux Media Labs.  Special thanks', 'to Bill Brown, Tom Ozanich, Brian', 'Celano, Jeff Eisner, and The Soundelux', 'Players.', '', '"Level Music" by Sonic Mayhem', 'www.sonicmayhem.com', '', '"Quake II Theme Song"', '(C) 1997 Rob Zombie. All Rights', 'Reserved.', '', 'Track 10 ("Climb") by Jer Sypult', '', 'Voice of computers by', 'Carly Staehlin-Taylor', '', '+THANKS TO ACTIVISION', '+IN PARTICULAR:', '', 'John Tam', 'Steve Rosenthal', 'Marty Stratton', 'Henk Hartong', '', 'Quake II(tm) (C)1997 Id Software, Inc.', 'All Rights Reserved.  Distributed by', 'Activision, Inc. under license.', 'Quake II(tm), the Id Software name,', 'the "Q II"(tm) logo and id(tm)', 'logo are trademarks of Id Software,', 'Inc. Activision(R) is a registered', 'trademark of Activision, Inc. All', 'other trademarks and trade names are', 'properties of their respective owners.', null]);
+  idcredits = initValues(_3Ljava_lang_String_2_classLit, makeCastMap([Q$Serializable, Q$Serializable_$1, Q$CharSequence_$1, Q$Cloneable, Q$Comparable_$1, Q$Object_$1, Q$String_$1]), Q$String, ['+QUAKE II BY ID SOFTWARE', '', '+PROGRAMMING', 'John Carmack', 'John Cash', 'Brian Hook', '', '+JAVA PORT BY BYTONIC', 'Carsten Weisse', 'Holger Zickner', 'Rene Stoeckel', '', '+GWT PORT BY GOOGLE', 'Ray Cromwell', 'Stefan Haustein', 'Joel Webber', 'Magnus Marks', '', '+FULL VERSION PORT', 'Magnus Marks', '', '+ART', 'Adrian Carmack', 'Kevin Cloud', 'Paul Steed', '', '+LEVEL DESIGN', 'Tim Willits', 'American McGee', 'Christian Antkow', 'Paul Jaquays', 'Brandon James', '', '+BIZ', 'Todd Hollenshead', 'Barrett (Bear) Alexander', 'Donna Jackson', '', '', '+SPECIAL THANKS', 'Ben Donges for beta testing', '', '', '', '', '', '', '+ADDITIONAL SUPPORT', '', '+LINUX PORT AND CTF', 'Dave "Zoid" Kirsch', '', '+CINEMATIC SEQUENCES', 'Ending Cinematic by Blur Studio - ', 'Venice, CA', '', 'Environment models for Introduction', 'Cinematic by Karl Dolgener', '', 'Assistance with environment design', 'by Cliff Iwai', '', '+SOUND EFFECTS AND MUSIC', 'Sound Design by Soundelux Media Labs.', 'Music Composed and Produced by', 'Soundelux Media Labs.  Special thanks', 'to Bill Brown, Tom Ozanich, Brian', 'Celano, Jeff Eisner, and The Soundelux', 'Players.', '', '"Level Music" by Sonic Mayhem', 'www.sonicmayhem.com', '', '"Quake II Theme Song"', '(C) 1997 Rob Zombie. All Rights', 'Reserved.', '', 'Track 10 ("Climb") by Jer Sypult', '', 'Voice of computers by', 'Carly Staehlin-Taylor', '', '+THANKS TO ACTIVISION', '+IN PARTICULAR:', '', 'John Tam', 'Steve Rosenthal', 'Marty Stratton', 'Henk Hartong', '', 'Quake II(tm) (C)1997 Id Software, Inc.', 'All Rights Reserved.  Distributed by', 'Activision, Inc. under license.', 'Quake II(tm), the Id Software name,', 'the "Q II"(tm) logo and id(tm)', 'logo are trademarks of Id Software,', 'Inc. Activision(R) is a registered', 'trademark of Activision, Inc. All', 'other trademarks and trade names are', 'properties of their respective owners.', null]);
   credits = idcredits;
   Menu_Credits = new Menu$9_0;
   s_game_menu = new Menu$menuframework_s_0;
@@ -14437,6 +14438,9 @@ function Game_MenuInit(){
   Menu_AddItem(s_game_menu, s_easy_game_action);
   Menu_AddItem(s_game_menu, s_medium_game_action);
   Menu_AddItem(s_game_menu, s_hard_game_action);
+  Menu_AddItem(s_game_menu, s_blankline);
+  Menu_AddItem(s_game_menu, s_load_game_action);
+  Menu_AddItem(s_game_menu, s_save_game_action);
   Menu_AddItem(s_game_menu, s_blankline);
   Menu_AddItem(s_game_menu, s_demo_action);
   Menu_AddItem(s_game_menu, s_benchmark_action);
