--- a/MS-DOS/Quake2/index.html
+++ b/MS-DOS/Quake2/index.html
@@ -31,7 +31,7 @@
       width: 800px;
       height: 600px;
       visibility: hidden;
-      position: absolute;
+      position: relative;
     }
 
     #log {
@@ -43,8 +43,11 @@
     }
 
     #download_dialog {
-      display: none;
       margin: 20px;
+      bottom: 30%;
+      position: fixed;
+      visibility: visible;
+      
     }
   </style>
 </head>
