--- a/MS-DOS/Quake/Quake.exe.html
+++ b/MS-DOS/Quake/Quake.exe.html
@@ -1,80 +1,88 @@
 <!doctype html>
 <html lang="en-us">
 <script type="text/javascript">
-document.addEventListener('contextmenu', function(e) {
-  e.preventDefault();
-});
-document.onkeydown = function(e) {
-  if(event.keyCode == 123) {
-     return false;
+  document.addEventListener('contextmenu', function (e) {
+    e.preventDefault();
+  });
+  document.onkeydown = function (e) {
+    if (event.keyCode == 123) {
+      return false;
+    }
+    if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+      return false;
+    }
+    if (e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
+      return false;
+    }
+    if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+      return false;
+    }
+    if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+      return false;
+    }
   }
-  if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
-     return false;
-  }
-  if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
-     return false;
-  }
-  if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
-     return false;
-  }
-  if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
-     return false;
-  }
-}
 </script>
 
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Quake</title>
-    <style type="text/css">
-      ::-webkit-scrollbar { width: 0; background: transparent; }
-      .dosbox-container { width: 640px; height: 400px; }    </style>
-  </head>
-  <body>
-    <center><div id="dosbox"></div></center>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <center><button onclick="dosbox.requestFullScreen();">Make fullscreen</button></center>
- 
-        <script src="../assets/js/index.js"></script>
-      <script type="text/javascript">
-        var dosbox = new Dosbox({
-          id: "dosbox",
-          onload: function (dosbox) {
-            dosbox.run("roms/QUAKE.zip", "./Quake.bat", {
-              saveFiles: retrieveSaveFiles()
-            });
-          }
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Quake</title>
+  <style type="text/css">
+    ::-webkit-scrollbar {
+      width: 0;
+      background: transparent;
+    }
+
+    .dosbox-container {
+      width: 640px;
+      height: 400px;
+    }
+  </style>
+</head>
+
+<body>
+  <center>
+    <div id="dosbox"></div>
+  </center>
+  <br>
+  <br>
+  <center><button onclick="dosbox.requestFullScreen();">Make fullscreen</button></center>
+
+  <script src="../assets/js/index.js"></script>
+  <script type="text/javascript">
+    var dosbox = new Dosbox({
+      id: "dosbox",
+      onload: function (dosbox) {
+        dosbox.run("roms/Quake.zip", "./Quake.bat", {
+          saveFiles: retrieveSaveFiles()
         });
+      }
+    });
 
-        window.onunload = function() {
-          storeSaveFiles();
-        }
+    window.onunload = function () {
+      storeSaveFiles();
+    }
 
-        function retrieveSaveFiles() {
-          var text = localStorage.getItem("files");
-          if (text) {
-            var files = JSON.parse(text);
-            files.forEach(function(file) {
-              file.data = Uint8Array.from(file.data);
-            })
-            return files;
-          }
-        }
+    function retrieveSaveFiles() {
+      var text = localStorage.getItem("files");
+      if (text) {
+        var files = JSON.parse(text);
+        files.forEach(function (file) {
+          file.data = Uint8Array.from(file.data);
+        })
+        return files;
+      }
+    }
 
-        function storeSaveFiles() {
-          var files = dosbox.getSaveFiles("SAVE*");
-          files.forEach(function(file) {
-            file.data = Array.from(file.data);
-          })
-          localStorage.setItem("files", JSON.stringify(files));
-        }
-      </script>
-  
-  </body>
+    function storeSaveFiles() {
+      var files = dosbox.getSaveFiles("SAVE*");
+      files.forEach(function (file) {
+        file.data = Array.from(file.data);
+      })
+      localStorage.setItem("files", JSON.stringify(files));
+    }
+  </script>
+
+</body>
+
 </html>
