--- a/MS-DOS/Batman/index.html
+++ b/MS-DOS/Batman/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html>
-
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <style>
@@ -13,8 +12,8 @@
       padding: 0;
     }
   </style>
-  <script src="./js-dos/js-dos.js"></script>
-  <link href="./js-dos/js-dos.css" rel="stylesheet">
+  <script src="../assets/js/js-dos.js"></script>
+  <link href="../assets/css/js-dos.css" rel="stylesheet">
 </head>
 
 <body>
