Update JS file test 3
UUUUUUUGGGGGGGGGHHHHHHHHHH

--- a/MS-DOS/Batman/index.html
+++ b/MS-DOS/Batman/index.html
@@ -19,7 +19,7 @@
 <body>
   <div id="jsdos"></div>
   <script>
-    emulators.pathPrefix = "js-dos/";
+    emulators.pathPrefix = "../assets/js/";
     Dos(document.getElementById("jsdos"), {
     }).run("./bundle.jsdos");
   </script>
