--- a/MS-DOS/Chex1/Chex.exe.html
+++ b/MS-DOS/Chex1/Chex.exe.html
@@ -1,97 +1,28 @@
-<html lang="en-us">
-<script type="text/javascript">
-    document.addEventListener('contextmenu', function(e) {
-        e.preventDefault();
-    });
-    document.onkeydown = function(e) {
-        if (event.keyCode == 123) {
-            return false;
-        }
-        if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
-            return false;
-        }
-        if (e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
-            return false;
-        }
-        if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
-            return false;
-        }
-        if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
-            return false;
-        }
-    }
-</script>
-
+<!doctype html>
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Chex Quest 1</title>
-    <style type="text/css">
-      ::-webkit-scrollbar { width: 0; background: transparent; }
-        .dosbox-container {
-            width: 640px;
-            height: 400px;
-        }
-        
-        .dosbox-container>.dosbox-overlay {
-            background: url();
-        }
-    </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <style>
+    html,
+    body,
+    #jsdos {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+  </style>
+  <script src="../assets/js/js-dos.js"></script>
+  <link href="../assets/css/js-dos.css" rel="stylesheet">
 </head>
 
 <body>
-    <script type="text/javascript">
-        function showhide() {
-            if (document.getElementById("dosbox").style.display == 'none') {
-                document.getElementById("dosbox").style.display = 'block';
-            } else {
-                document.getElementById("dosbox").style.display = 'none';
-            }
-        }
-    </script>
-
-    <center>
-        <div id="dosbox"></div>
-    </center>
-    <br/>
-    <center><button onclick="dosbox.requestFullScreen();">Make fullscreen</button></center>
-
-    <script src="../assets/js/index.js"></script>
-    <script type="text/javascript">
-        var dosbox = new Dosbox({
-            id: "dosbox",
-            onload: function(dosbox) {
-                dosbox.run("roms/CHEX1.zip", "./chex1.bat", {
-                    saveFiles: retrieveSaveFiles()
-                });
-            }
-        });
-
-        window.onunload = function() {
-            storeSaveFiles();
-        }
-
-        function retrieveSaveFiles() {
-            var text = localStorage.getItem("files");
-            if (text) {
-                var files = JSON.parse(text);
-                files.forEach(function(file) {
-                    file.data = Uint8Array.from(file.data);
-                })
-                return files;
-            }
-        }
-
-        function storeSaveFiles() {
-            var files = dosbox.getSaveFiles("SAVE*");
-            files.forEach(function(file) {
-                file.data = Array.from(file.data);
-            })
-            localStorage.setItem("files", JSON.stringify(files));
-        }
-    </script>
-    <center>Press Enter to start, use the arrow keys to move, ctrl to shoot, space to interact.</center>
-
+  <div id="jsdos"></div>
+  <script>
+    emulators.pathPrefix = "../assets/js/";
+    Dos(document.getElementById("jsdos"), {
+    }).run("./bundle.jsdos");
+  </script>
 </body>
 
 </html>
