--- a/MS-DOS/Quake2/index.html
+++ b/MS-DOS/Quake2/index.html
@@ -85,7 +85,7 @@
     <tt>
       Play Quake II:<br>
     </tt>
-    <input type="hidden" id="source_url" size="100" value="./Hexen.zip">
+    <input type="hidden" id="source_url" size="100" value="./Quake2.zip">
 
     <script>
       function trash() {
