--- a/assets/Windows Keys.html
+++ b/assets/Windows Keys.html
@@ -16,7 +16,7 @@
 
   <div class=WordSection1>
 
-    <h1 align=center style='text-align:center'><span style='font-size:20.0pt;
+    <h1 align=center style='text-align:center'><span style='font-size:26.0pt;
 line-height:107%'>Microsoft Office<o:p></o:p></span></h1>
 
     <table class=MsoTable15Plain1 border=1 cellspacing=0 cellpadding=0 width="100%" style='width:100.0%;border-collapse:collapse;border:none;mso-border-alt:solid #BFBFBF .5pt;
@@ -196,7 +196,7 @@ line-height:107%'>Microsoft Office<o:p></o:p></span></h1>
   mso-border-left-themeshade:191;mso-border-alt:solid #BFBFBF .5pt;mso-border-themecolor:
   background1;mso-border-themeshade:191;padding:0in 5.4pt 0in 5.4pt'>
           <p class=MsoNormal style='margin-bottom:0in;line-height:normal'>XQNVK-8JYDB-WJ9W3-YJ8YR-WFG99
-            (Volume)</p>
+            (Volume 1 use)</p>
         </td>
         <td width="15%" valign=top style='width:15.66%;border-top:none;border-left:
   none;border-bottom:solid #BFBFBF 1.0pt;mso-border-bottom-themecolor:background1;
