--- a/Emulator/index.html
+++ b/Emulator/index.html
@@ -15,9 +15,9 @@
                 <option id="snes" value="smariokart">Super Mario Kart</option>
             </optgroup>
             <optgroup label="N64">
-                <option id="n64" value="mk64">Mario Kart 64</option>
-                <option id="n64" value="mk4">Mortal Kombat 4</option>
-                <option id="n64" value="sm64">Super Mario 64</option>
+                <option id="n64" value="MK64">Mario Kart 64</option>
+                <option id="n64" value="MK4">Mortal Kombat 4</option>
+                <option id="n64" value="SM64">Super Mario 64</option>
             </optgroup>
             <optgroup label="Nintendo DS">
                 <option id="nds" value="MDKDS">Mario vs. Donkey Kong</option>
@@ -52,7 +52,7 @@
                 }
             // }
             let gname = Selected;
-            let total = `./roms/${gname}.zip`;
+            let total = `./Roms/${gname}.zip`;
             event.preventDefault();
             const div = document.createElement("div");
             const sub = document.createElement("div");
