--- a/GBA/launcher.html
+++ b/GBA/launcher.html
@@ -59,6 +59,7 @@
             <link rel="stylesheet" href="user_css/main.css">
     </head>
     <body>
+        <h1>Loading...</h1>
         <canvas id="emulator_target" width="240px" height="160px"></canvas>
         <span id="tempMessage"></span>
     </body>
