--- a/Emulator/index.html
+++ b/Emulator/index.html
@@ -18,6 +18,8 @@
                 <option id="n64" value="MK64">Mario Kart 64</option>
                 <option id="n64" value="MK4">Mortal Kombat 4</option>
                 <option id="n64" value="SM64">Super Mario 64</option>
+                <option id="n64" value="D64">Doom 64</option>
+                <option id="n64" value="Q2">Quake II</option>
             </optgroup>
             <optgroup label="Nintendo DS">
                 <option id="nds" value="MDKDS">Mario vs. Donkey Kong</option>
