--- a/Emulator/index.html
+++ b/Emulator/index.html
@@ -77,7 +77,7 @@
             window.EJS_biosUrl = "";
             window.EJS_gameUrl = total;
             if (core === "GBA") {
-                window.location.href = `https://magnusmarx.github.io/GBA/launcher.html#${gname}`;
+                window.location.href = `https://adam-s-amir.github.io/GBA/launcher.html#${gname}`;
             } else {
             window.EJS_core = core;
             }
