--- a/Emulator/index.html
+++ b/Emulator/index.html
@@ -8,9 +8,8 @@
 
 <body>
     <div id="container">
-        <p class="par">Select a game</p>
         <select id="Packs" class="dropdown">
-            <option>---</option>
+            <option style="text-align: center;">Select a game:</option>
             <optgroup label="SNES">
                 <option id="snes" value="smariokart">Super Mario Kart</option>
             </optgroup>
@@ -43,11 +42,11 @@
                 <option id="psx" value="GT2">Gran Turismo 2</option>
             </optgroup> -->
         </select>
-        <!-- <div id=box>
+        <div id=box>
             <input type=file id=input>
-            or drag a ROM file here
-        </div> -->
-        <button onclick="Start();">Start</button>
+            or drag a<br>ROM file here
+        </div>
+        <button id="Start" onclick="Start();">Start</button>
     </div>
     <script>
         let PackSelect = document.getElementById("Packs");
@@ -77,14 +76,65 @@
             window.EJS_biosUrl = "";
             window.EJS_gameUrl = total;
             if (core === "GBA") {
-                window.location.href = `https://magnusmarx.github.io/GBA/launcher.html#${gname}`;
+                window.location.href = `https://adam-s-amir.github.io/GBA/launcher.html#${gname}`;
             } else {
-            window.EJS_core = core;
+                window.EJS_core = core;
             }
             window.EJS_pathtodata = "./JS/";
             window.EJS_startOnLoaded = true;
             script.src = "./JS/loader.js";
             document.body.appendChild(script);
+        }
+        input.onchange = async () => {
+            const url = URL.createObjectURL(new Blob([input.files[0]]))
+            const parts = input.files[0].name.split(".")
+            var extension = parts[parts.length - 1].toLowerCase();
+            let core;
+            if (extension === 'fds' || extension === 'unif' || extension === 'unf') {
+                core = 'nes';
+            } else if (extension === 'smc' || extension === 'fig' || extension === 'sfc' || extension === 'gd3' || extension === 'gd7' || extension === 'dx2' || extension === 'swc') {
+                core = 'snes';
+            } else if (extension === 'z64') {
+                core = 'n64';
+            } else if (extension === 'gbc') {
+                core = 'gb';
+            } else if (extension === 'zip' || extension === '7z' || extension === 'rar' || extension === 'iso' || extension === 'tar') {
+                alert("Please unzip the file first :)");
+                return;
+            } else {
+                extension = core;
+            }
+
+            console.log(core);
+
+            const div = document.createElement("div")
+            const sub = document.createElement("div")
+            const script = document.createElement("script")
+
+            sub.id = "game"
+            div.id = "display"
+
+            div.appendChild(sub)
+            document.body.appendChild(div)
+
+            window.EJS_player = "#game"
+            window.EJS_biosUrl = ""
+            window.EJS_gameUrl = url
+            window.EJS_core = core
+            window.EJS_pathtodata = "./JS/"
+            window.EJS_startOnLoaded = true
+
+            script.src = "./JS/loader.js"
+            document.body.appendChild(script)
+
+            box.ondragover = () => box.setAttribute("drag", true)
+            box.ondragleave = () => box.removeAttribute("drag")
+            let x = document.getElementById("container");
+            if (x.style.display === "none") {
+                x.style.display = "block";
+            } else {
+                x.style.display = "none";
+            }
         }
     </script>
     <script src="./JS/jquery.min.js"></script>
