--- a/Emulator/index.html
+++ b/Emulator/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Emulator</title>
+    <title>Kronos</title>
     <link rel="stylesheet" href="./JS/style.css">
 </head>
 
