--- a/Application Files/Minecraft/MineCrap 1.5.2/index.html
+++ b/Application Files/Minecraft/MineCrap 1.5.2/index.html
@@ -60,7 +60,7 @@
                     const relayId = Math.floor(Math.random() * 3);
                     window.eaglercraftOpts = {
                         container: "game_frame",
-                        assetsURI: `https://magnusmarx.github.io/EPK/${Selected}.epk`,
+                        assetsURI: `https://magnusware-libs.vercel.app/MagnusWare/EPK/${Selected}.epk`,
                         serverWorkerURI: "./worker_bootstrap.js",
                         worldsFolder: "MAIN",
                         assetOverrides: {
