--- a/Application Files/Minecraft/MineCrap 1.5.2/index.html
+++ b/Application Files/Minecraft/MineCrap 1.5.2/index.html
@@ -17,7 +17,6 @@
                 background-color: #0d0c0c;
                 color: #fff;
             }
-            
             .dropdown {
                 position: relative;
                 display: inline-block;
@@ -60,7 +59,7 @@
                     const relayId = Math.floor(Math.random() * 3);
                     window.eaglercraftOpts = {
                         container: "game_frame",
-                        assetsURI: `https://magnusware-libs.vercel.app/MagnusWare/EPK/${Selected}.epk`,
+                        assetsURI: `https://magnusware-libs.vercel.app/Application%20Files/Minecraft/MineCrap%201.5.2/libs/${Selected}.epk`,
                         serverWorkerURI: "./worker_bootstrap.js",
                         worldsFolder: "MAIN",
                         assetOverrides: {
